@startuml its_dcd
!include ../_shared/its-uml-style.puml

title Issue Tracking System - Design Class Diagram

left to right direction
hide circle
skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam linetype polyline
skinparam nodesep 190
skinparam ranksep 25
skinparam ArrowFontSize 13
skinparam ArrowThickness 1.15
scale 1.0

class User <<entity>> {
  -loginId : String
  -name : String
  -passwordHash : String
  -role : Role
  -active : boolean
  --
  +hasRole(role : Role) : boolean
  +rename(name : String) : void
  +changeRole(role : Role) : void
  +setActive(active : boolean) : void
}

class Project <<entity>> {
  -projectId : long
  -name : String
  -description : String
  --
  +rename(name : String) : void
  +changeDescription(description : String) : void
}

class ProjectMember <<association class>> {
  -projectId : long
  -userLoginId : String
  -joinedAt : LocalDateTime
}

class Issue <<aggregate root>> {
  -issueId : String
  -title, description : String
  -priority : Priority
  -status : IssueStatus
  -reportedDate, updatedAt : LocalDateTime
  --
  +create(title : String, description : String, reporter : User) : Issue
  +updateContent(title : String, description : String) : void
  +changePriority(priority : Priority) : void
  +assignOrUpdate(assignee : User, verifier : User) : void
  +changeStatus(targetStatus : IssueStatus, actor : User, comment : String) : void
  +addComment(content : String, writer : User, purpose : CommentPurpose) : Comment
  +addDependency(blockingIssue : Issue) : IssueDependency
  +removeDependency(dependency : IssueDependency) : void
}

class Comment <<entity>> {
  -commentId : String
  -content : String
  -purpose : CommentPurpose
  -createdDate, updatedDate : LocalDateTime
  --
  +changeContent(content : String) : void
}

class IssueHistory <<entity>> {
  -historyId : String
  -actionType : ActionType
  -previousValue, newValue : String
  -message : String
  -changedDate : LocalDateTime
}

class IssueDependency <<association class>> {
  -dependencyId : String
  -discoveredDate : LocalDateTime
}

' Layout hints only. They make the DCD wider without changing relationships.
Project -[hidden]right- ProjectMember
ProjectMember -[hidden]right- User
User -[hidden]right- Issue
Issue -[hidden]right- IssueDependency
IssueDependency -[hidden]right- Comment
Comment -[hidden]right- IssueHistory

Project "1" -- "0..*" ProjectMember : has member
User "1" -- "0..*" ProjectMember : joins as
User "1" -- "0..*" Project : manages

Project "1" -- "0..*" Issue : contains
User "1" -- "0..*" Issue : participates as\nreporter / assignee / verifier\nfixer / resolver

Issue "1" *-- "0..*" Comment : comments {ordered}
Issue "1" *-- "0..*" IssueHistory : histories {ordered}
User "1" -- "0..*" Comment : writes
User "1" -- "0..*" IssueHistory : changes

Issue "1" -[norank]- "0..*" IssueDependency : dependency role\n(blocking / blocked)

@enduml
